--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -115,6 +115,10 @@
     }
 }
 
+.woocommerce-pagination {
+    margin-bottom: 40px;
+}
+
 /* SINGLE PRODUCT PAGE
 --------------------------------------- */
 .single-product {
